# attalang

./: .env.example  .gitignore  AGENTS.md  README.md  model_health_check.py  pyproject.toml
admin/: benchmark_docker_token_reduction.py
agentic_lab/: CONFIG_PATCH.md  DASHBOARD_CONFIG.md  OPENCLAW_COMMANDS.md  OPENCLAW_SETUP.md  OPENCLAW_TEST_RESULTS.md  README.md  TOKEN_USAGE.md
agentic_lab/research/: agent-frameworks-m1-20250222.md  comprehensive-comparison-20250222.md  picoclaw-ironclaw-m1-20250222.md  self-hosted-assistants-m1-20250222.md
docs/: AGENT_PLAYBOOK.md  ARCHITECTURE-ROUTING.md  BRAINSTORM-token-reduction.md  FLOWCHART-REFERENCE.md  PRD.md  TOKEN-USAGE-REPORT.md  TOOL-PREVENTION-PATTERNS.md  code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
docs/research/: 00-RESEARCH-SUMMARY.md  01-LANGCHAIN-ECOSYSTEM.md  02-LANGGRAPH-REFERENCE.md  03-DEEPAGENTS-SDK.md  04-AGENT-PATTERNS.md  05-BEST-PRACTICES.md  06-MULTI-AGENT-FRAMEWORKS-2025.md  07-DYNAMIC-FILTERING-WEB-SEARCH.md  08-A2A-PROTOCOL-LANGGRAPH.md  09-PYDANTIC-DEEPAGENTS.md
plan/docker-agentv2-pydantic-20260221-173856/: README.md  plan.md
plan/docker-agentv2-pydantic-20260221-173856/research/: references.md
plan/docker-tools-hybrid-20260222-183737/: README.md  plan.md
plan/docker-tools-hybrid-20260222-183737/phases/: phase-1-create-bash-tool.md  phase-2-migrate-safe-tools.md  phase-3-update-agent-config.md  phase-4-testing-validation.md
plan/docker-tools-hybrid-20260222-183737/research/: existing-code.md  references.md  requirements.md
plan/pydantic-migration-20260222-034922/: README.md  plan.md
plan/pydantic-migration-20260222-034922/phases/: phase-1-convert-states.md  phase-2-update-nodes.md  phase-3-update-runtime.md  phase-4-update-tests.md
plan/pydantic-migration-20260222-034922/research/: existing-code.md  references.md
plan/quick-win-token-reduction-20260221-014646/: README.md  plan.md
plan/quick-win-token-reduction-20260221-014646/phases/: phase-1-json-output.md  phase-2-skip-synthesis.md  phase-3-verify.md
plan/research/: CONTEXT_EXPLOSION_ANALYSIS.md  TOKEN_BLOAT_ROOT_CAUSE.md  loop-detection-replanning-workflow.md  openclaw-m1-openrouter-20250222.md
plan/research-deepagents-structured-output-20260221/: findings.md
plan/research-programmatic-tool-calling-20260225/: research.md
plan/research-pydantic-migration-20260222/: research.md
plan/research/token-efficiency-analysis/: findings.md  recommendations.md
plan/subagent-architecture-docker-20260221-005543/: README.md  plan.md
research/: pydantic-deepagents.md
src/multi_agent/: __init__.py
src/multi_agent/agents/: __init__.py  (+1 more)
src/multi_agent_v2/: __init__.py
tests/: test_docker_agent_subagents.py  test_docker_agent_v2.py  test_docker_bash.py  test_docker_tools_v2_workspace.py  test_docker_tools_workspace.py  test_docker_trajectory.py  test_langgraph_runtime.py  test_programmatic_v3.py  test_runtime_v2.py  test_token_reduction.py  test_trajectory.py
(+39 files in other folders)
