[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent"
version = "0.1.0"
description = "Multi-agent supervisor-bridge-customer architecture using LangGraph + DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # Core agent framework
    "deepagents>=0.4.1",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    # LLM providers
    "langchain-openai>=0.2.0",
    "openai>=1.54.0",
    # Data & config
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
]

[project.optional-dependencies]
# Vector memory (qdrant-based RAG)
memory = [
    "qdrant-client>=1.12.0",
    "langchain-openai>=0.2.0",   # for OpenAIEmbeddings
]
# Development
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
multi-agent-cli = "src.multi_agent.runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
