[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent"
version = "0.2.0"
description = "Docker agent with LangGraph + DeepAgents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # Agent framework
    "deepagents>=0.4.1",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    # LLM
    "openai>=1.0.0",
    # Config & utils
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    # Docker
    "docker>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
agentv2 = [
    "pydantic-deep>=0.1.0,<1.0.0",
    "pydantic-ai-backend>=0.1.0,<1.0.0",
]

[project.scripts]
multi-agent-cli = "src.multi_agent.runtime.cli:main"
multi-agent-cli-v2 = "src.multi_agent_v2.runtime.cli_v2:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
